# VideoKit-demo

./: README.md  README_ZH.md  build.gradle  mcs-services.json  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_quant_sm8550.dlc  model_quant_sm8650.dlc
app/src/main/cpp/: CMakeLists.txt  Faith.h  NpuTextureJni.cpp  ResolutionEnhancement.h  Utils.cpp  Utils.h
app/src/main/java/com/hihonor/videokit/: BaseActivity.java  MainActivity.java
app/src/main/java/com/hihonor/videokit/hdrtranscode/: Hdr2SdrActivity.java
app/src/main/java/com/hihonor/videokit/npu/: Glcontext.java  NpuActivity.java
app/src/main/java/com/hihonor/videokit/sdrplus/: SdrPLusActivity.java
app/src/main/java/com/hihonor/videokit/sharpen/: SharpenActivity.java
app/src/main/java/com/hihonor/videokit/videoenhance/: EHdrEntranceActivity.java  EHdrSurfaceActivity.java  EHdrTextureActivity.java
app/src/main/res/drawable/: btn_background.xml  btn_normal.xml  btn_pressed.xml
app/src/main/res/layout/: activity_ehdr_entrance.xml  activity_ehdr_surface.xml  activity_ehdr_texture.xml  activity_hdr_2_sdr.xml  activity_main.xml  activity_npu.xml  activity_sdr_plus.xml  activity_sharpen.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
